# pyproject.toml

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_structures_and_algorithms"
version = "1.0.0"
description = "Implementations of standard data structures and algorithms in Python, with example uses"
readme = "README.md"
authors = [{ name = "Christopher Holland", email = "chris.henry.holland@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
    "python",
    "data structure",
    "algorithm",
    "mathematics",
    "prime sieve",
    "geometry",
    "convex hull",
    "graph",
    "tree",
    "heap",
    "segment tree",
    "Fenwick tree",
    "binary indexed tree",
    "suffix array",
    "string searching",
]
dependencies = [
    "sortedcontainers>=2.4.0",
]
requires-python = ">=3.11"

[project.urls]
Repository = "https://github.com/chris-henry-holland/python-DataStructuresAndAlgorithms.git"